@@ -126,7 +126,8 @@ typedef enum {
     STAT_RESUME_ERROR,
     STAT_DAEMON_ERROR,
     STAT_APPLICATION_EXITED,
-    STAT_PENDING_ACK
+    STAT_PENDING_ACK,
+    STAT_DYSECT_ERROR
 } StatError_t;
 
 //! An enum for STAT verbosity type
@@ -227,6 +228,9 @@ typedef enum {
             break; \
         case STAT_PENDING_ACK: \
             fprintf(outFp, "STAT_PENDING_ACK"); \
+            break; \
+        case STAT_DYSECT_ERROR: \
+            fprintf(outFp, "STAT_DYSECT_ERROR"); \
             break; \
         default: \
             fprintf(outFp, "Unknown Error"); \
